--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,3 +11,165 @@
       display: none; /* For Chrome, Safari, and Opera */
     }
 }
+
+.theme-light {
+    --brand-primary: rgb(47, 112, 193);
+    --brand-secondary: rgb(116, 97, 195);
+    --brand-alternative: rgb(19, 120, 134);
+    --background-site: rgb(249, 249, 249);
+    --background-code: rgb(244, 244, 244);
+    --text-body: rgb(54, 49, 61);
+    --text-comment: rgb(99, 94, 105);
+    --text-high-contrast: rgb(49, 49, 49);
+    --text-medium-contrast: rgb(99, 94, 105);
+    --text-low-contrast: rgb(116, 109, 118);
+    --detail-high-contrast: rgb(192, 192, 192);
+    --detail-medium-contrast: rgb(234, 234, 234);
+    --detail-low-contrast: rgb(240, 240, 242);
+    --admonition-note: rgb(46, 109, 188);
+    --admonition-warning: rgb(255, 196, 9);
+    --admonition-danger: rgb(220, 38, 38);
+    --brand-primary-rgb-value: 47, 112, 193;
+    --brand-secondary-rgb-value: 116, 97, 195;
+    --brand-alternative-rgb-value: 19, 120, 134;
+    --background-site-rgb-value: 249, 249, 249;
+    --background-code-rgb-value: 244, 244, 244;
+    --text-body-rgb-value: 54, 49, 61;
+    --text-comment-rgb-value: 99, 94, 105;
+    --text-high-contrast-rgb-value: 49, 49, 49;
+    --text-medium-contrast-rgb-value: 99, 94, 105;
+    --text-low-contrast-rgb-value: 116, 109, 118;
+    --detail-high-contrast-rgb-value: 192, 192, 192;
+    --detail-medium-contrast-rgb-value: 234, 234, 234;
+    --detail-low-contrast-rgb-value: 240, 240, 242;
+    --admonition-note-rgb-value: 46, 109, 188;
+    --admonition-warning-rgb-value: 255, 196, 9;
+    --admonition-danger-rgb-value: 220, 38, 38;
+}
+.theme-dark {
+    --brand-primary: rgb(138, 180, 248);
+    --brand-secondary: rgb(193, 168, 226);
+    --brand-alternative: rgb(136, 186, 191);
+    --background-site: rgb(0, 0, 0);
+    --background-code: rgb(12, 12, 12);
+    --text-body: rgb(222, 222, 222);
+    --text-comment: rgb(170, 170, 170);
+    --text-high-contrast: rgb(230, 230, 230);
+    --text-medium-contrast: rgb(202, 202, 202);
+    --text-low-contrast: rgb(170, 170, 170);
+    --detail-high-contrast: rgb(101, 101, 101);
+    --detail-medium-contrast: rgb(25, 25, 25);
+    --detail-low-contrast: rgb(21, 21, 21);
+    --admonition-note: rgb(138, 180, 248);
+    --admonition-warning: rgb(253, 186, 116);
+    --admonition-danger: rgb(220, 38, 38);
+    --brand-primary-rgb-value: 138, 180, 248;
+    --brand-secondary-rgb-value: 193, 168, 226;
+    --brand-alternative-rgb-value: 136, 186, 191;
+    --background-site-rgb-value: 0, 0, 0;
+    --background-code-rgb-value: 12, 12, 12;
+    --text-body-rgb-value: 222, 222, 222;
+    --text-comment-rgb-value: 170, 170, 170;
+    --text-high-contrast-rgb-value: 230, 230, 230;
+    --text-medium-contrast-rgb-value: 202, 202, 202;
+    --text-low-contrast-rgb-value: 170, 170, 170;
+    --detail-high-contrast-rgb-value: 101, 101, 101;
+    --detail-medium-contrast-rgb-value: 25, 25, 25;
+    --detail-low-contrast-rgb-value: 21, 21, 21;
+    --admonition-note-rgb-value: 138, 180, 248;
+    --admonition-warning-rgb-value: 253, 186, 116;
+    --admonition-danger-rgb-value: 220, 38, 38;
+}
+
+/*.embla {*/
+/*    max-width: 48rem;*/
+/*    margin: auto;*/
+/*    --slide-height: 19rem;*/
+/*    --slide-spacing: 1rem;*/
+/*    --slide-size: 100%;*/
+/*}*/
+/*.embla__viewport {*/
+/*    overflow: hidden;*/
+/*}*/
+/*.embla__container {*/
+/*    display: flex;*/
+/*    touch-action: pan-y pinch-zoom;*/
+/*    margin-left: calc(var(--slide-spacing) * -1);*/
+/*}*/
+/*.embla__slide {*/
+/*    transform: translate3d(0, 0, 0);*/
+/*    flex: 0 0 var(--slide-size);*/
+/*    min-width: 0;*/
+/*    padding-left: var(--slide-spacing);*/
+/*}*/
+
+/*.embla__slide__number {*/
+/*    box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);*/
+/*    border-radius: 1.8rem;*/
+/*    font-size: 4rem;*/
+/*    font-weight: 600;*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*    height: var(--slide-height);*/
+/*    user-select: none;*/
+/*}*/
+
+
+.embla {
+    max-width: 100%; /* Allow full width */
+    width: 100%;
+    margin: auto;
+    --slide-height: 100%; /* Change to use full height */
+    --slide-spacing: 1rem;
+    --slide-size: 100%;
+}
+
+.embla__viewport {
+    overflow: hidden;
+    width: 100%;
+}
+
+.embla__container {
+    display: flex;
+    touch-action: pan-y pinch-zoom;
+    margin-left: calc(var(--slide-spacing) * -1);
+    width: 100%;
+    height: 100%;
+}
+
+.embla__slide {
+    transform: translate3d(0, 0, 0);
+    flex: 0 0 var(--slide-size);
+    min-width: 0;
+    padding-left: var(--slide-spacing);
+    height: 100%; /* Make sure slides take full height */
+}
+
+.embla__slide__number {
+    box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
+    border-radius: 0.5rem;
+    font-size: 4rem;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    user-select: none;
+}
+
+
+@media (min-width: 768px) {
+    .embla {
+        width: 80%;
+        margin: auto;
+    }
+}
+
+/* Styles for large screens and up (lg breakpoint) */
+@media (min-width: 1024px) {
+    .embla {
+        width: 50%;
+    }
+}
